Refactored code to improve exception handling and response structure, implemented CRUD endpoints for orders, products, and customers, added DTO classes.