@@ -13,12 +13,12 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/customers")
 public class CustomerController {
 
+    public static final String ID_NOT_FOUND = "ID NOT FOUND ";
     @Autowired
     private ICustomerService customerService;
     @Autowired
@@ -26,52 +26,61 @@ public class CustomerController {
 
     @GetMapping("")
     public ResponseEntity<List<CustomerDTO>> getAllCustomers() throws Exception {
-        return new ResponseEntity<>(customerService.listAll()
-                .stream()
-                .map(p -> mapper.map(p, CustomerDTO.class)).collect(Collectors.toList()), HttpStatus.OK);
+        List<CustomerDTO> customerDTOs = customerService.listAll()
+            .stream()
+            .map(customer -> mapper.map(customer, CustomerDTO.class))
+            .toList();
+        return ResponseEntity.status(HttpStatus.OK).body(customerDTOs);
     }
 
     @GetMapping("/{idCustomer}")
-    public ResponseEntity<CustomerDTO> getCustomerById(@PathVariable("idCustomer") Integer idCustomer) throws Exception {
+    public ResponseEntity<CustomerDTO> getCustomerById(
+        @PathVariable("idCustomer") Integer idCustomer) throws Exception {
         Customer customer = customerService.listById(idCustomer);
         if (customer == null) {
-            throw new ModelNotFoundException("ID NOT FOUND " + idCustomer);
+            throw new ModelNotFoundException(ID_NOT_FOUND + idCustomer);
         }
-        return new ResponseEntity<>(mapper.map(customer, CustomerDTO.class), HttpStatus.OK);
+        return ResponseEntity.status(HttpStatus.OK).body(mapper.map(customer, CustomerDTO.class));
     }
 
     @PostMapping
-    public ResponseEntity<CustomerDTO> saveCustomer(@RequestBody CustomerDTO customerDTO) throws Exception {
+    public ResponseEntity<CustomerDTO> saveCustomer(@RequestBody CustomerDTO customerDTO)
+        throws Exception {
         mapper.getConfiguration().setMatchingStrategy(MatchingStrategies.LOOSE);
         Customer customer = mapper.map(customerDTO, Customer.class);
         Address address = mapper.map(customerDTO, Address.class);
-        CustomerDTO obj = mapper.map(customerService.transactionalRecord(customer, address, "CREATED"), CustomerDTO.class);
-        return new ResponseEntity<>(obj, HttpStatus.CREATED);
+        CustomerDTO obj = mapper.map(
+            customerService.transactionalRecord(customer, address, "CREATED"), CustomerDTO.class);
+        return ResponseEntity.status(HttpStatus.CREATED).body(obj);
     }
 
     @PutMapping("/{idCustomer}")
-    public ResponseEntity<CustomerDTO> updateCustomer(@PathVariable("idCustomer") Integer idCustomer, @RequestBody CustomerDTO customerDTO) throws Exception {
+    public ResponseEntity<CustomerDTO> updateCustomer(
+        @PathVariable("idCustomer") Integer idCustomer, @RequestBody CustomerDTO customerDTO)
+        throws Exception {
         Customer customer = customerService.listById(idCustomer);
 
         if (customer == null) {
-            throw new ModelNotFoundException("ID NOT FOUND " + customerDTO.getId());
+            throw new ModelNotFoundException(ID_NOT_FOUND + customerDTO.getId());
         }
 
         customerDTO.setId(customer.getId());
-        customerDTO.getAddress().setId(customer.getAddress().getId());
+        customerDTO.getAddress().setIdAdress(customer.getAddress().getIdAdress());
         Address address = customerDTO.getAddress();
-        Customer newCustomer = mapper.map((customerDTO),Customer.class);
-        CustomerDTO obj = mapper.map(customerService.transactionalRecord(newCustomer, address, "UPDATE"), CustomerDTO.class);
-        return new ResponseEntity<>(obj, HttpStatus.OK);
+        Customer newCustomer = mapper.map(customerDTO, Customer.class);
+        CustomerDTO updatedCustomerDTO = mapper.map(
+            customerService.transactionalRecord(newCustomer, address, "UPDATE"), CustomerDTO.class);
+        return ResponseEntity.status(HttpStatus.OK).body(updatedCustomerDTO);
     }
 
     @DeleteMapping("/{idCustomer}")
-    public ResponseEntity<Void> deleteCustomerById(@PathVariable("idCustomer") Integer idCustomer) throws Exception {
+    public ResponseEntity<Void> deleteCustomerById(@PathVariable("idCustomer") Integer idCustomer)
+        throws Exception {
         Customer customer = customerService.listById(idCustomer);
         if (customer == null) {
-            throw new ModelNotFoundException("ID NOT FOUND " + idCustomer);
+            throw new ModelNotFoundException(ID_NOT_FOUND + idCustomer);
         }
         customerService.delete(idCustomer);
-        return new ResponseEntity<>(HttpStatus.NO_CONTENT);
+        return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
     }
 }
