@@ -1,5 +1,7 @@
 package com.example.store.service.impl;
 
+import com.example.store.dto.OrderDTO;
+import com.example.store.dto.ProductRequest;
 import com.example.store.exeption.ModelNotFoundException;
 import com.example.store.model.Order;
 import com.example.store.model.Product;
@@ -8,6 +10,9 @@ import com.example.store.repository.OrderProductRepository;
 import com.example.store.service.IOrderService;
 import com.example.store.service.IProductService;
 import com.example.store.utils.PaymentType;
+import java.time.format.DateTimeFormatter;
+import org.modelmapper.ModelMapper;
+import org.modelmapper.TypeToken;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.jpa.repository.JpaRepository;
 import org.springframework.stereotype.Service;
@@ -17,12 +22,12 @@ import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Service
 public class OrderServiceImpl extends CRUDImpl<Order, Integer> implements IOrderService {
 
+    public static final String YYYY_M_MDD_H_HMMSS = "yyyyMMddHHmmss";
+    public static final String ID_NOT_FOUND = "ID NOT FOUND: ";
     @Autowired
     private IOrderRepository orderRepository;
 
@@ -32,6 +37,9 @@ public class OrderServiceImpl extends CRUDImpl<Order, Integer> implements IOrder
     @Autowired
     private OrderProductRepository orderProductRepository;
 
+    @Autowired
+    private ModelMapper mapper;
+
     @Override
     protected JpaRepository<Order, Integer> getRepository() {
         return orderRepository;
@@ -39,55 +47,53 @@ public class OrderServiceImpl extends CRUDImpl<Order, Integer> implements IOrder
 
     @Transactional
     @Override
-    public Order saveOrder(Order order, List<Product> listProduct) throws Exception {
+    public Order saveOrder(OrderDTO orderDTO) throws Exception {
+        Order order = mapper.map(orderDTO, Order.class);
         BigDecimal totalOrderValue = BigDecimal.ZERO;
-        var date = LocalDateTime.now();
+        LocalDateTime date = LocalDateTime.now();
         order.setPaymentType(PaymentType.CASH.getPayment());
-        order.setOrderNumber(
-                Stream.of(date.toString().split("[\\-T:]"))
-                        .map(String::trim)
-                        .collect(Collectors.joining())
-        );
+        order.setOrderNumber(date.format(DateTimeFormatter.ofPattern(YYYY_M_MDD_H_HMMSS)));
         order.setDate(date);
         orderRepository.save(order);
-        for (int i = 0; i < listProduct.size(); i++) {
 
-            Product p = productService.listById(listProduct.get(i).getId());
-            orderProductRepository.saveOrderProduct(order.getId(), listProduct.get(i).getId());
-            totalOrderValue = totalOrderValue.add(p.getPrice());
-            List<Product> products = order.getListProducts();
-            products.forEach(product -> {
-                product.setDescription(p.getDescription());
-                product.setPrice(p.getPrice());
-                product.setWeight(p.getWeight());
-            });
+        List<ProductRequest> productRequests = orderDTO.getListProducts();
+        for (ProductRequest pdt : productRequests) {
+            Product p = productService.listById(pdt.getId());
+            orderProductRepository.saveOrderProduct(order.getId(), pdt.getId(), pdt.getQuantity());
+            totalOrderValue = p.getPrice().multiply(BigDecimal.valueOf(pdt.getQuantity()))
+                .add(totalOrderValue);
+            pdt.setDescription(p.getDescription());
+            pdt.setPrice(p.getPrice());
+            pdt.setWeight(p.getWeight());
         }
+        order.setListProducts(mapper.map(productRequests, new TypeToken<List<ProductRequest>>() {
+        }.getType()));
         order.setTotalOrderValue(totalOrderValue);
         return order;
     }
 
 
     @Override
-    public Order getOrderById(Integer idOrder) throws Exception {
-        Order order = orderRepository.findById(idOrder).orElse(null);
-        List<Product> products = listProductsByIdOrder(idOrder);
+    public Order getOrderById(Integer id) throws ModelNotFoundException {
+        Order order = orderRepository.findById(id)
+            .orElseThrow(() -> new ModelNotFoundException(ID_NOT_FOUND + id));
+
+        List<Product> products = listProductsByIdOrder(id);
         order.setListProducts(products);
         return order;
     }
 
-    private List<Product> listProductsByIdOrder(Integer idOrder) throws Exception {
+    private List<Product> listProductsByIdOrder(Integer idOrder) throws ModelNotFoundException {
         List<Integer> listIdProductByOrder = orderProductRepository.findIdProductByOrder(idOrder);
         return listIdProductByOrder.stream()
-                .map(id -> {
-                    try {
-                        return productService.listById(id);
-                    } catch (Exception e) {
-                        throw new ModelNotFoundException("ID NOT FOUND " + idOrder);
-                    }
-                })
-                .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+            .map(id -> {
+                try {
+                    return productService.listById(id);
+                } catch (Exception e) {
+                    throw new ModelNotFoundException(ID_NOT_FOUND + id);
+                }
+            })
+            .filter(Objects::nonNull)
+            .toList();
     }
-
-
 }
